docs: atualiza README.md